Replace JavaParser by javac's parser, for expressions
Co-authored-by: Abhijit Kulkarni <akulk022@ucr.edu>
Co-authored-by: Suzanne Millstein <smillst@cs.washington.edu>